Fullscreen div width and height replaced with a fix value but set the body to overflow: hidden.

--- a/app/stylesheets/partials/_fullscreen.sass
+++ b/app/stylesheets/partials/_fullscreen.sass
@@ -1,3 +1,6 @@
+body
+  overflow: hidden
+  
 .fullscreen
   #main-sign
     background-color: transparent
@@ -5,11 +8,11 @@
       
 #full-screen, #full-screen-container
   display: none
-  position: absolute
+  position: fixed
   top: 0
   left: 0
-  width: 100%
-  height: 100%
+  width: 100000px
+  height: 100000px
   z-index: 100
 
   &.enabled
